--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.3.1",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "nodemon": "^3.0.1"
   }
 }
